# strawberry_rover

./: .gitignore  .gitmodules  AGENTS.md  CURRENT_STATE.md  DEV_ROADMAP.md  NEXT_TASK.md  ORCHESTRATOR.md  PROJECT_CONTEXT.md  PROJECT_OVERVIEW_RU.md  README  README.md  TOPIC_CONTRACT.md  restart_sim.sh
MEGA_Rover_4x_RC_PWM/: MEGA_Rover_4x_RC_PWM.ino
arduino/MEGA_Rover_Gecoma/: MEGA_Rover_Gecoma.ino  platformio.ini
arduino/MEGA_Rover_Gecoma/src/: MEGA_Rover_Gecoma.ino
arduino/libraries/PS2X_lib/: PS2X_lib.cpp
arduino/sketch_mar04b/: sketch_mar04b.ino
bootstrap/: orin_bootstrap.sh  realsense_d405_orin.sh  requirements-orin.txt
config/: folder_to_class_id.json  roarm_home_joints.yaml  roarm_learn.yaml
docs/: NEW_ORIN_AGENT_PROMPT.md  agents_current_stack_instructions.md  class_inspection_summary.md  dataset_normalization_summary.md  datasets_overview.md  final_detection_dataset_summary.md  model_selection.md  orin_migration_and_optimization_plan.md  orin_new_device_setup.md  realsense_d405_orin.md  roarm_pick_rl_plan.md  segmentation_dataset_plan.md
install/: local_setup.sh  setup.sh
install/rover_fake_stereo/share/rover_fake_stereo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_fake_stereo/share/rover_fake_stereo/launch/: fake_stereo.launch.py
install/rover_navigation/share/rover_navigation/: package.sh  package.xml
install/rover_simulation/share/rover_simulation/: package.sh  package.xml
install/rover_simulation/share/rover_simulation/config/: rover_pose_simulator.yaml
install/rover_visualization/share/rover_visualization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
models/: weights_manifest.json
ops/axm-monitor/: .env.example  DEPLOY_SSH_AGENT_PROMPT.md  UPDATE_SITE.md  docker-compose.yml
pipelines/: __init__.py  roarm_berry_planner.py  roarm_kinematics.py  roarm_knowledge.py  roarm_live_approach.py  roarm_motion.py  roarm_perception.py  roarm_plane_perception.py  roarm_strawberry_overlay.py  roarm_strawberry_target.py  roarm_target_overlay.py  roarm_template_track.py  ros_rgb_depth.py  strawberry_ensemble.py
reports/: fps_dataset_check.json  fps_dataset_check.md  fps_dataset_trt_comparison.json  fps_dataset_trt_comparison.md
reports/classification_benchmark/: benchmark_summary.csv  benchmark_summary.json  benchmark_summary.md
reports/detect_benchmark/: benchmark_progress.json  benchmark_summary.csv  benchmark_summary.md
reports/detect_benchmark_v2/: conf_sweep.md  detector_v1_vs_v2_on_new_test.json  detector_v1_vs_v2_on_new_test.md  production_yolov8n_vs_yolov8s_v2.json  production_yolov8n_vs_yolov8s_v2.md
reports/detect_benchmark_v3/: detector_v2_vs_v3_on_v3test.json  detector_v2_vs_v3_on_v3test.md
reports/segment_benchmark/: benchmark_summary.csv  benchmark_summary.json  benchmark_summary.md
scripts/: _delete_list.json  _delete_list_2.json  _delete_list_turkey_1.json  audit_and_cleanup_detection_bbox_vis.py  axm_detect_devices.py  axm_single_instance.sh  build_classification_dataset_v2.py  build_detection_dataset_v2_from_roboflow_coco.py  build_detection_dataset_v2_resplit.py  build_detection_dataset_v3_lowdensity.py  build_unified_dataset_directory.py  check_rtk.sh  class_inspect.py  conf_sweep_detectors_on_test.py  convert_coco_to_yolo_seg.py  curation-ui.service  curation_classifier.py  curation_ui.py  curation_ui_static.html  dataset_normalize.py  dedup_classifier_images.py  delete_paths.py  dump_camera_profiles.py  eval_detectors_on_dataset_test.py  eval_v2_vs_v3_on_v3test.py  evaluate_segmentation_models.py  export_bbox_crops.py  export_classification_crops.py  extract_classifier_priority_crops.py  flash_mega.sh  import_rotten_priority_from_obb_dataset.py  import_to_final_detection_dataset.py  import_unripe_priority_from_obb_dataset.py  infer_classifier.py  install_curation_ui_service.sh  jetson_gpu_env.sh  merge_unified_datasets.py  prepare_segmentation_project_dataset.py  prepare_yolo_detection_dataset.py  remap_labels_to_unified.py  (+21 more)
sketch_mar04a/: sketch_mar04a.ino
src/roarm_ros2_http/: README.md  package.xml  setup.cfg  setup.py
src/rover_bringup/: README.md  package.xml  setup.cfg  setup.py
src/rover_bringup/config/: field_sim_debug.rviz  rover_navigation_fast_test.yaml  rover_pose_simulator_fast_test.yaml
src/rover_bringup/launch/: bringup.launch.py  perception_sensors.launch.py
src/rover_bringup/resource/: rover_bringup
src/rover_description/: README.md  package.xml  setup.cfg  setup.py
src/rover_description/launch/: view_robot.launch.py
src/rover_description/urdf/: rover.urdf
src/rover_fake_camera/: README.md  package.xml  setup.cfg  setup.py
src/rover_fake_lidar/: README.md  package.xml  setup.cfg  setup.py
src/rover_fake_stereo/: README.md  setup.cfg  setup.py
src/rover_fsm/: README.md  setup.cfg  setup.py
src/rover_navigation/: README.md  setup.py
src/rover_perception/: README.md  setup.py
src/rover_simulation/: README.md  setup.py
src/rover_state/: README.md  package.xml  setup.cfg  setup.py
src/rover_state/resource/: rover_state
src/rover_utils/: README.md  package.xml  setup.cfg  setup.py
src/rover_utils/rover_utils/: __init__.py
src/rover_visualization/: README.md  setup.cfg  setup.py
src/rover_web_interface/: README.md  package.xml  setup.cfg  setup.py
src/rover_web_interface/launch/: web_interface.launch.py
src/rover_web_interface/rover_web_interface/: __init__.py
src/rover_web_interface/rover_web_interface/backend/: __init__.py  api_server.py  ros_bridge.py
src/rover_web_interface/rover_web_interface/frontend/: dashboard.js  index.html
tools/: benchmark_fps_dataset_matrix.py  benchmark_holdout_full_pipeline_fps.py  label_fps_dataset_from_reserve.py  learn_stereo_brightness_mask.py  measure_stereo_brightness.py
tools/export_tensorrt/: README.md  export_all_group02.sh  export_yolo.py
tools/roarm_local_gui/: README.md  roarm_client.py  roarm_test_gui.py  sequence_manager.py  sequences.json  tested_workspace.json
tools/rover_mega/: tank_drive.py
(+122 files in other folders)
