<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>Robot description package (URDF/Xacro) for the strawberry rover.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
</package>

