<?xml version="1.0"?>
<package format="3">
  <name>rover_utils</name>
  <version>0.0.0</version>
  <description>Shared Python utilities for the strawberry rover packages.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

