<?xml version="1.0"?>
<package format="3">
  <name>rover_visualization</name>
  <version>0.0.0</version>
  <description>Visualization and monitoring tools for the strawberry rover.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

